# skills

./: .gitignore  .pre-push  CLAUDE.md  CONTRIBUTING.md  README.md  SKILLS.md  package.json  pyproject.toml  requirements.txt  skills-catalog.json  test-setup.py  tsconfig.build.json  tsconfig.json  tsconfig.test.json
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.husky/: pre-push
TEMPLATE/: SKILL.md  skill.ts
dev/: pyproject.toml
dev/catalog/: build_catalog.py
dev/harness/: mock_context.py  runner.py
dev/js-harness/: assertions.ts  helper-layer.ts  mock-bridge.ts  mock-sql.ts  runner.ts  test-utils.ts
dev/runtime/: server.py
dev/scaffold/: new_skill.py
dev/security/: scan_secrets.py
dev/test-harness/: README.md  bootstrap-live.ts  bootstrap-node.ts  bootstrap.ts  mock-state.ts  persistent-state.ts  repl-node.ts  runner-node.ts  runner.ts
dev/test-harness/scripts/: test-ping-flow.js
dev/types/: setup_types.py  skill_types.py
dev/validate/: validator.py
docs/: SKILLS.md  api-reference.md  architecture.md  getting-started.md  lifecycle.md  publishing.md  python-skills.md  testing.md
examples/: README.md
prompts/: README.md  generate-skill.md  refine-skill.md
scripts/: analyze-and-split.py  bundle-skills.mjs  bundle-telegram.disable.mjs  bundle-telegram.mjs  check_mypy.py  check_python_syntax.py  debug-graph.py  fix-broken-imports.py  strip-exports.mjs  test-entities.py  test-harness.mjs  test-js.sh  test-server.py  test-setup.py  test-sync.py  update-catalog.py  watch-build.mjs
src/: test-harness-globals.ts
types/: globals.d.ts  (+2 more)
(+451 files in other folders)
