[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alphahuman-skill-dev"
version = "1.0.0"
description = "Developer toolchain for AlphaHuman skills"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.scripts]
skill-validate = "dev.validate.validator:main"
skill-test = "dev.harness.runner:main"
skill-new = "dev.scaffold.new_skill:main"
skill-scan = "dev.security.scan_secrets:main"
skill-catalog = "dev.catalog.build_catalog:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dev*"]
